# duplex

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  eslint.config.mjs  package.json
examples/: rsmpeg_smoke.rs
scripts/: bucket_catalog.py  scan_library.py
src/: capability.rs  config.rs  main.rs  stream.rs
src/api/: browse.rs  codec_string.rs  debug.rs  file.rs  flatten.rs  hls.rs  houseparty.rs  manifest.rs  mod.rs  next.rs  poster.rs  raw.rs  recent.rs  search.rs  sidecar.rs  subs.rs  vpath.rs  web.rs
src/ffmpeg/: mod.rs
src/probe/: keyframes.rs  matroska.rs  mod.rs
src/stream/: mod.rs  pump.rs
tvos/: Makefile  README.md  project.yml
tvos/Sources/: AppDelegate.swift  Info.plist  TVWebView.h  TVWebView.m  WebViewController.swift
tvos/Sources/App/: AppConfig.swift  DuplexApp.swift
tvos/Sources/Browse/: BingeChooserView.swift  BreadcrumbBar.swift  BrowseHeader.swift  BrowseView.swift  Column.swift  ContinueRow.swift  EntryRow.swift  Formatters.swift  HomeView.swift  SearchView.swift  SortToggle.swift
tvos/Sources/HouseParty/: HousePartyStore.swift
tvos/Sources/Net/: DuplexClient.swift  DuplexModels.swift
tvos/Sources/Player/: AVPlayerViewControllerHost.swift  EndOfVideoCard.swift  NowPlayingController.swift  PlayerCoordinator.swift  PlayerErrorCard.swift  PlayerRemoteInput.swift  PlayerView.swift  SubtitleOverlay.swift  SubtitleParser.swift
tvos/Sources/Settings/: SettingsView.swift
tvos/Sources/Storage/: BingeStore.swift  ExtensionPreference.swift  (+5 more)
web/: app.js  duplex-log.js  index.html  player.js  style.css
(+16 files in other folders)
