[package]
name = "duplex"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
anyhow = "1"
arc-swap = "1.7"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
rsmpeg = { version = "0.18", features = ["link_system_ffmpeg"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
mime_guess = "2"
notify = "8"
notify-debouncer-full = "0.6"
percent-encoding = "2"
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
